--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,43 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cloud.mu — Linux mirrors in Mauritius</title>
-    <meta name="description" content="Linux mirrors in Mauritius is a project sponsored by cloud.mu. It is run by Linux enthusiasts whose aim is to improve the Linux experience on the island by setting up mirrors for popular Linux distributions, such as Ubuntu, Fedora, openSUSE, AlmaLinux, among others." />
-    <link rel="icon" href="https://mirror.cloud.mu/images/cloudmu-icon.svg" type="image/svg+xml" />
-    <link rel="canonical" href="https://mirror.cloud.mu" />
-    <meta name="referrer" content="no-referrer-when-downgrade" />
-    <meta property="og:site_name" content="Linux mirrors in Mauritius" />
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="Linux mirrors in Mauritius" />
-    <meta property="og:description" content="Linux mirrors in Mauritius is a project sponsored by cloud.mu. It is run by Linux enthusiasts whose aim is to improve the Linux experience on the island by setting up mirrors for popular Linux distributions, such as Ubuntu, Fedora, openSUSE, AlmaLinux, among others." />
-    <meta property="og:url" content="https://mirror.cloud.mu" />
-    <meta property="og:image" content="https://mirror.cloud.mu/images/linux-mirrors.png" />
-    <meta property="article:published_time" content="2022-10-08T14:56:37.000Z" />
-    <meta property="article:modified_time" content="2022-10-08T14:56:37.000Z" />
-    <meta property="article:tag" content="Linux" />
-    <meta property="article:tag" content="Mauritius" />
+---
+import Layout from '../layouts/Layout.astro';
+---
 
-    <meta property="article:publisher" content="https://cloud.mu" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Linux mirrors in Mauritius" />
-    <meta name="twitter:description" content="Linux mirrors in Mauritius is a project sponsored by cloud.mu. It is run by Linux enthusiasts whose aim is to improve the Linux experience on the island by setting up mirrors for popular Linux distributions, such as Ubuntu, Fedora, openSUSE, AlmaLinux, among others." />
-    <meta name="twitter:url" content="https://twitter.com/openSUSE_MU" />
-    <meta name="twitter:image" content="https://mirror.cloud.mu/images/linux-mirrors.png" />
-    <meta name="twitter:label1" content="Written by" />
-    <meta name="twitter:data1" content="openSUSE Mauritius" />
-    <meta name="twitter:label2" content="Filed under" />
-    <meta name="twitter:data2" content="Linux, Mauritius, Mirrors, Open Source, Ubuntu, openSUSE, Fedora, AlmaLinux" />
-    <meta name="twitter:site" content="@openSUSE_MU" />
-    <meta property="og:image:width" content="2000" />
-    <meta property="og:image:height" content="1045" />
-
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-slate-100">
-    <header class="max-w-4xl mx-auto">
+<Layout>
+	<header class="max-w-4xl mx-auto">
         <nav class="mt-6 p-4 bg-white rounded-md">
             <a href="/index.html" class="flex flex-row gap-2 items-center">
                 <img src="/images/cloudmu-icon.svg" class="h-8" />
@@ -169,5 +135,4 @@
             </a>
         </section>
     </footer>
-</body>
-</html>
+</Layout>
